tests/NormalTests/paczka1/small_fuzzy/26761469.err
Error in line 3: S713 A619 59,1
Error in line 2: audpVnp A918 33,5
Error in line 9: audpVnp A619 52,4
